# rpc_server

./: .clang-format  CMakeLists.txt  rpc_server.cc  rpc_server.h  rpcsrvd.cc  utils.cc
client/: ws_client.js
conf/: rpcsrvd.conf
lib/: CMakeLists.txt  rdk_rpc.proto  rpc_channel.cc  rpc_channel.h  rpc_controller.cc  rpc_controller.h  rpc_log.cc  rpc_log.h
protos/: rpc_server.proto
services/: CMakeLists.txt  bluetooth_service.cc  bluetooth_service.h  bluetooth_service.proto
